app/stylesheets/home_page/_who_section.sass
@import '../components/election_programs.sass'
body
	overflow: hidden
#whoBox
	.wrapper
		background-image: linear-gradient(45deg, #FF9D60 0%, #E95C73 100%)
.who-description
	h2
		font-size: 1.88rem
		font-weight: bold
		padding-bottom: 0
		text-transform: uppercase
	p
		padding-top: 10px
	img
		width: 20px
	.btn-default
		border-radius: 1.5rem 0 0 1.5rem
		border-right-color: transparent
		width: 70%
		float: right
		clear: both

